# evalo.ai-backend

./: .env.example  README.md  pyproject.toml  requirements.txt  transcript.txt
app/: __init__.py  main.py
app/database/: database.py
app/models/: meeting.py
app/routes/: analysis.py  meetings.py  reports.py  suggestions.py
app/schemas/: analysis.py  meeting.py  report.py  suggestion.py
app/services/: question_generator.py
app/utils/: __init__.py  ai_suggestions.py  report_generator.py  voice_analyzer.py
