[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-management-api"
version = "1.0.0"
description = "API for managing interview meetings and reviews"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.2",
    "pydantic>=2.4.2",
    "SQLAlchemy>=2.0.22",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.6",
    "google-generativeai>=0.3.2",
    "librosa>=0.10.1",
    "numpy>=1.24.3",
    "soundfile>=0.12.1",
    "SpeechRecognition>=3.10.0",
    "pydub>=0.25.1",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88 